--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
   }).addTo(map);
 
   /* Display a point marker with pop-up text */
-  L.marker([41.77, -72.69]).addTo(map) // EDIT latitude, longitude to re-position marker
-  .bindPopup("Insert pop-up text here"); // EDIT pop-up text message
+  L.marker([-1.292066, 36.821945]).addTo(map) // EDIT latitude, longitude to re-position marker
+  .bindPopup("My First Popup"); // EDIT pop-up text message
 
   </script>
 </body>
