--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   /* Display a point marker with pop-up text */
   L.marker([-1.292066, 36.821945]).addTo(map) // EDIT latitude, longitude to re-position marker
-  .bindPopup("My First Popup"); // EDIT pop-up text message
+  .bindPopup("My First Popup!"); // EDIT pop-up text message
 
   </script>
 </body>
